flux/infrastructure/rabbitmq-broker/controller-deployment.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-broker-controller
  namespace: knative-eventing
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-broker-controller
  template:
    metadata:
      labels:
        app: rabbitmq-broker-controller
        eventing.knative.dev/release: devel
    spec:
      serviceAccountName: eventing-controller
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rabbitmq-broker-controller
          terminationMessagePolicy: FallbackToLogsOnError
          image: localhost:5001/knative-rabbitmq-broker-controller:v1.17.6
          imagePullPolicy: IfNotPresent
          resources:
            # requests:
            #   cpu: 100m
            #   memory: 512Mi
            limits:
              # cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - all
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
      # nodeSelector:
      #   knative: "true"
      # tolerations:
      #   - key: knative
      #     operator: Equal
      #     value: "true"
      #     effect: NoSchedule
