flux/infrastructure/rabbitmq-broker/webhook-configurations.yaml
# Copyright 2022 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.rabbitmq.eventing.knative.dev
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
webhooks:
  - admissionReviewVersions: ["v1", "v1alpha1"]
    clientConfig:
      service:
        name: rabbitmq-broker-webhook
        namespace: knative-eventing
    sideEffects: None
    failurePolicy: Fail
    name: defaulting.webhook.rabbitmq.eventing.knative.dev
    timeoutSeconds: 2

---
# Copyright 2021 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.rabbitmq.eventing.knative.dev
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
webhooks:
  - admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: rabbitmq-broker-webhook
        namespace: knative-eventing
    sideEffects: None
    failurePolicy: Fail
    name: validation.webhook.rabbitmq.eventing.knative.dev
    timeoutSeconds: 2
